<resources>
    <string name="app_name">Featmap</string>
    <string name="next">Далее</string>
    <string name="onboarding_first">Ищи ближайшие мероприятия</string>
    <string name="onboarding_second">Посещай интересные места</string>
    <string name="onboarding_third">Знакомься с новыми людьми</string>
    <string name="input_phone_number">Перед тем, как начать введи номер телефона</string>
    <string name="example_phone_number">+X (XXX) XXX-XX-XX</string>
    <string name="input_code">Отправь код из СМС</string>
    <string name="example_verefy_code">123456</string>
    <string name="what_is_your_name">Как тебя зовут?</string>
    <string name="example_name">Александр</string>
    <string name="go">Я пойду</string>
    <string name="not_go">Отказаться</string>
    <string name="events">Events</string>

</resources>