<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingHorizontal="25dp"
        android:text="@string/what_is_your_name"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="24sp"
        android:layout_marginBottom="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/example_name"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/btn_blue"
        android:paddingHorizontal="15dp"
        android:textColor="@color/pink"
        android:fontFamily="@font/montserrat"
        android:paddingVertical="7dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:maxLength="11"
        android:background="@drawable/border_phone_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="gone"
        android:backgroundTint="@color/btn_blue"
        android:textColor="@color/pink"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>