<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:paddingHorizontal="25dp"
        android:text="@string/input_phone_number"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="24sp"
        android:layout_marginBottom="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/input_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/example_phone_number"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/btn_blue"
        android:paddingHorizontal="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/pink"
        android:fontFamily="@font/montserrat"
        android:paddingVertical="7dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="12"
        android:background="@drawable/border_phone_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send"
        app:layout_constraintTop_toBottomOf="@+id/text"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/send"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        app:cardBackgroundColor="@color/btn_blue"
        app:cardElevation="0dp"
        android:focusable="true"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="@id/input_number"
        app:layout_constraintBottom_toBottomOf="@id/input_number"
        app:layout_constraintStart_toEndOf="@id/input_number"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tint="@color/pink"
            android:padding="4dp"
            android:src="@drawable/send_icon"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/message_error_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_number"
        app:layout_constraintStart_toStartOf="@id/input_number"
        android:textColor="@color/red"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verifyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_error_number">

        <TextView
            android:id="@+id/verify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingHorizontal="25dp"
            android:text="@string/input_code"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/input_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/example_verefy_code"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:maxLength="6"
            android:textColorHint="@color/btn_blue"
            android:paddingHorizontal="15dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/pink"
            android:fontFamily="@font/montserrat"
            android:paddingVertical="7dp"
            android:inputType="number"
            android:background="@drawable/border_phone_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/verify_code"
            app:layout_constraintTop_toBottomOf="@+id/verify_text"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/verify_code"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="@color/btn_blue"
            app:cardElevation="0dp"
            android:focusable="true"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toTopOf="@id/input_code"
            app:layout_constraintBottom_toBottomOf="@id/input_code"
            app:layout_constraintStart_toEndOf="@id/input_code"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/pink"
                android:padding="7dp"
                android:src="@drawable/verify_icon"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/message_error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/input_code"
            app:layout_constraintStart_toStartOf="@id/input_code"
            android:textColor="@color/red"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>